src/App.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

* {
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;
}

:root {
  --main-color: #e96745;
  --main-background-color: #202225;
  --secondary-background-color: rgba(0, 0, 0, 0.65); /*#36393f*/
  --trinary-background-color: #2f3136;
  --text-icon-shadow: 1px 1px 4px black;
  --text-icon-shadow-1: 3px 5px 10px #000;
  --border: 1px solid var(--black);
  --boxShadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),
    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.12);
}

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

div.App {
  width: 100vw;
  min-width: 938px;
  height: 100vh;
  min-height: 498px;
  display: flex;
  flex-direction: column;
  background: var(--main-background-color);
}

div.App header.App-header {
  width: 100vw;
  height: fit-content;
  height: 20px;
  display: flex;
  align-items: center;
}

div.App div.main-content-flex-box {
  flex-grow: 1;
  display: flex;
  flex-direction: row;
}

div.App button {
  background-color: #e96745;
  color: rgba(0, 0, 0, 0.87);
  box-shadow: var(--boxShadow);
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
    border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  line-height: 1.75;
  font-weight: 500;
  border-radius: 4px;
  letter-spacing: 0.02857em;
  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
}

div.App button.button {
  padding: 16px;
}


::-webkit-scrollbar {
  width: 1px;
}
::-webkit-scrollbar-track {
  background: rgb(0, 0, 0, 0);
}
::-webkit-scrollbar-thumb {
  background: rgba(97, 97, 97, 0.353);
}
::-webkit-scrollbar-thumb:hover {
  background: rgba(144, 144, 144, 0.353);
}

::-webkit-scrollbar {
  width: 1px;
}
::-webkit-scrollbar-track {
  background: rgb(0, 0, 0, 0);
}
::-webkit-scrollbar-thumb {
  background: rgba(97, 97, 97, 0.353);
}
::-webkit-scrollbar-thumb:hover {
  background: rgba(144, 144, 144, 0.353);
}

.logo {
  height: 20px;
}

